@@ -1168,6 +1168,8 @@ Revision history for Perl extension Imager.
 - setmask() now returns true on success and reports a missing mask
   parameter.
 - double per sample images were ignoring the channel mask.
+- converted t/t021sixteen.t to use Test::More
+- 16-bit per sample images were ignoring the channel mask
 
 =================================================================
 
